jQuery Edit In Place (JEIP)
Change Log

0.2.0 - 16 Dec 2012
	- new settings: method, hint_text, or_text, prepare_data, template,
	  on_render
	- fixed asynchronicity issues with remove() after fadeOut()
	- elements ids prefixed with jeip-
	- optimizations: decreased number of calls to jQuery on the same
	  selector, removed unused variables and functions
	- id attributes of form elements generated outside of templates
	- customizable ajax data, by default containing only the input value
	- mouseover_class is optional, disabled by default